--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 <body>
     <main>
-        <div>
-            <p></p>
+        <div class="container">
+            <ul></ul>
         </div>
+        
     </main>
     <script src="script.js"></script>
 </body>
